Add delete button to lease component
